Correção na controller 'Client', criação da documentação para a 'Order' e correção da validação.
